cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Number_of_Total_Products__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Total_Products__c</fullName>
    <description>Number of total Products associated to this Order. Calculating all the Monday.com Products</description>
    <inlineHelpText>Number of total Products associated to this Order. Calculating all the Monday.com Products</inlineHelpText>
    <label>Number of Total Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>