cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Number_of_Transaction_Related_Live__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Transaction_Related_Live__c</fullName>
    <label>Number of Transaction-Related Live</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>