cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Number_of_Translations_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Translations_Meetings__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>DEACTIVATED</inlineHelpText>
    <label>Number of Translations (Meetings)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>