cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Number_of_Veracast_Products__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Veracast_Products__c</fullName>
    <inlineHelpText>Roll Up field that works off the product family value</inlineHelpText>
    <label>Number of Veracast Products</label>
    <summarizedField>Monday_com_Products__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Monday_com_Products__c.Veracast_Product__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Monday_com_Products__c.Monday_com_Integration__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>