cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Number_of_Video_App_Packages__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Video_App_Packages__c</fullName>
    <label>Number of Video App Packages</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>