cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/OE_Business_Lead_Email__c.field-meta.xml
<CustomField>
    <fullName>OE_Business_Lead_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OE Business Lead Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>