cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/OE_Business_Lead_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>OE_Business_Lead_SF_ID__c</fullName>
    <formula>Order__r.Owner:User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>OE Business Lead SF ID</inlineHelpText>
    <label>OE Business Lead SF ID</label>
    <type>Text</type>
</CustomField>