cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/OE_Central_URL__c.field-meta.xml
<CustomField>
    <fullName>OE_Central_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OE Central URL</label>
    <type>Url</type>
</CustomField>