cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/OE_Client_Lead__c.field-meta.xml
<CustomField>
    <fullName>OE_Client_Lead__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OE Client Lead DEACTIVATE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>