cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/OE_Passport__c.field-meta.xml
<CustomField>
    <fullName>OE_Passport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OE Passport</label>
    <type>Checkbox</type>
</CustomField>