cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/OETV_Content__c.field-meta.xml
<CustomField>
    <fullName>OETV_Content__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OETV Content</label>
    <type>Checkbox</type>
</CustomField>