cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Opp_Forecast_Compared_to_Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Opp_Forecast_Compared_to_Order_Amount__c</fullName>
    <formula>Order_Amount__c -  Order__r.Opportunity.Capital_Markets_Forecast_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Forecast Compared to Order Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>