cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <formula>Order__r.Opportunity.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity</label>
    <type>Text</type>
</CustomField>