cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Monday.com Integration</relationshipLabel>
    <relationshipName>Monday_com_Integration</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>