cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Order_Amount_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Order_Amount_Opportunity__c</fullName>
    <label>Order Amount (Opportunity)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>