cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Order_Amount_Tracked__c.field-meta.xml
<CustomField>
    <fullName>Order_Amount_Tracked__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Also tracked as &quot;Order Amount&quot; - please reach out to Sara/Kevin on questions</description>
    <label>Order Amount Tracked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>