cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Order_at_New_Status_7_Days_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Order_at_New_Status_7_Days_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order at &quot;New&quot; Status 7 Days Email Sent</label>
    <type>Checkbox</type>
</CustomField>