cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Order_Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Confirmed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Order Confirmed Date</label>
    <type>Date</type>
</CustomField>