cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Monday.com Integration</relationshipLabel>
    <relationshipName>Monday_com_Integration</relationshipName>
    <type>Lookup</type>
</CustomField>