cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/OrderID__c.field-meta.xml
<CustomField>
    <fullName>OrderID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OrderID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>