cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Original_Business_Line__c.field-meta.xml
<CustomField>
    <fullName>Original_Business_Line__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Original Business Line</label>
    <length>50</length>
    <type>Text</type>
</CustomField>