cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Production_Support_Notes__c.field-meta.xml
<CustomField>
    <fullName>Production_Support_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Production Support Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>