cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Production_Support_Required__c.field-meta.xml
<CustomField>
    <fullName>Production_Support_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Production Support Required</label>
    <type>Checkbox</type>
</CustomField>