cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Project_Manager_2__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Project Manager 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>