cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Project_Manager_2_Email__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_2_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Project Manager 2 Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>