cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Project_Manager_2_Email_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_2_Email_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Manager 2 Email Assignment</label>
    <type>Checkbox</type>
</CustomField>