cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Project Manager</label>
    <length>100</length>
    <type>Text</type>
</CustomField>