cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Record_URL__c.field-meta.xml
<CustomField>
    <fullName>Record_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Record URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>