cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>