cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Related_Order_s_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Order_s_Account__c</fullName>
    <description>Field will pull in the Account of the related Order lookup. Useful for Streamlinks</description>
    <formula>Order__r.Related_Order__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field will pull in the Account of the related Order lookup. Useful for Streamlinks</inlineHelpText>
    <label>Related Order&apos;s Account</label>
    <type>Text</type>
</CustomField>