cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Requester_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Requester_Contact_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Requester Contact Phone</label>
    <length>250</length>
    <type>Text</type>
</CustomField>