cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Revenue Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>