cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Special_Billing_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Billing_Instructions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Special Billing Instructions</label>
    <length>100</length>
    <type>Text</type>
</CustomField>