cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Start_and_End_Date_Crossover_Month__c.field-meta.xml
<CustomField>
    <fullName>Start_and_End_Date_Crossover_Month__c</fullName>
    <formula>IF(Month_of_End_Date__c = Month_of_Start_Date__c, &quot;No&quot;, &quot;Yes&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns Yes or No based on formula to see if the Start and End Date cross over into different months</inlineHelpText>
    <label>Start and End Date Crossover Month</label>
    <type>Text</type>
</CustomField>