cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Streamlink_Order_Landing_Page_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Streamlink_Order_Landing_Page_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Email Alert to be sent to Marketing / Colin Hickey to create a new Streamlink Landing Page</inlineHelpText>
    <label>Streamlink Order Landing Page Email Sent</label>
    <type>Checkbox</type>
</CustomField>