cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Streamlink_Order_Landing_Page_Required__c.field-meta.xml
<CustomField>
    <fullName>Streamlink_Order_Landing_Page_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this is a conference that will offer Streamlinks. This will trigger automation to Monday.com to indicate action items on Michael Brown&apos;s team</inlineHelpText>
    <label>Streamlink Order Landing Page Required</label>
    <type>Checkbox</type>
</CustomField>