cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Time Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>