cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Total_Price_OE_Live_Meeting_Partnerships__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_OE_Live_Meeting_Partnerships__c</fullName>
    <label>Total Price OE Live Meeting Partnerships</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>