cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Total_Price_of_Add_Ons__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_of_Add_Ons__c</fullName>
    <inlineHelpText>Roll Up field that works off the sub product family value</inlineHelpText>
    <label>Total Price of Add-Ons</label>
    <summarizedField>Monday_com_Products__c.Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Monday_com_Products__c.Product_Family__c</field>
        <operation>equals</operation>
        <value>Add-on</value>
    </summaryFilterItems>
    <summaryForeignKey>Monday_com_Products__c.Monday_com_Integration__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>