cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Total_Price_of_all_Products__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_of_all_Products__c</fullName>
    <inlineHelpText>Price of all products associated to this Order. Calculating all the Monday.com Products</inlineHelpText>
    <label>Total Price of all Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>