cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Total_Price_of_Basic_Conferences__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_of_Basic_Conferences__c</fullName>
    <description>Basic Conference Streaming Package</description>
    <inlineHelpText>Basic Conference Streaming Package</inlineHelpText>
    <label>Total Price of Basic Conferences</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>