cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Total_Price_of_Branded_Homepage_Event_SC__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_of_Branded_Homepage_Event_SC__c</fullName>
    <inlineHelpText>Branded Homepage/Event Showcase</inlineHelpText>
    <label>Total Price of Branded Homepage/Event SC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>