cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Total_Price_of_Broadcast_Center_Full_Day__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_of_Broadcast_Center_Full_Day__c</fullName>
    <inlineHelpText>Total Price of Broadcast Center Full Day Sessions</inlineHelpText>
    <label>Total Price of Broadcast Center Full Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>