cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Total_Price_of_Camera_SoundCrew_Equipt__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_of_Camera_SoundCrew_Equipt__c</fullName>
    <inlineHelpText>Total Price of Camera/SoundCrew &amp; Equipment</inlineHelpText>
    <label>Total Price of Camera/SoundCrew &amp; Equipt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>