cititechdNew2024Jan/force-app/main/default/objects/Monday_com_Integration__c/fields/Total_Price_of_Cancellation_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_of_Cancellation_Fees__c</fullName>
    <label>Total Price of Cancellation Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>